--- a/Atividade - L.M/site/index.html
+++ b/Atividade - L.M/site/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Curriculun Vitae</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div id="article">
@@ -73,7 +74,7 @@
     <p><a href="#">topo</a></p>
   </div>
   <div id="footer">
-    <p id="copyright">IFPB &copy; 2017</p>
+    <p id="copyright" class="text-center text-bold text-italic">IFPB &copy; 2017</p>
   </div>
 </body>
 </html>
