--- a/Atividade - L.M/site/pages/resumo.html
+++ b/Atividade - L.M/site/pages/resumo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title> Resumo</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
     <p><a href="../index.html"><img src="../img/voltar.png" alt="voltar"></a></p>
   </div>
   <div id="footer">
-    <p id="copyright">IFPB &copy; 2017</p>
+    <p id="copyright" class="text-center text-bold text-italic">IFPB &copy; 2017</p>
   </div>
 </body>
 </html>
