--- a/HTML + CSS/Atividade 2 - L.M (25)/site/index.html
+++ b/HTML + CSS/Atividade 2 - L.M (25)/site/index.html
@@ -14,8 +14,8 @@
     <p><b>Nascimento:</b> <i>01/01/1970</i></p>
     <p><b>Email:</b> </i>elon@email.com</p>
     <p><b>Telefone:</b> </i>(83) 99999-9999</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate reprehenderit fugiat, recusandae placeat quas et provident veniam impedit, commodi minus dignissimos, repellendus quaerat sint adipisci aut, debitis. Architecto minima, harum! <a href="pages/resumo.html">leia mais <span class="material-icons">
-launch </span></a> </p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate reprehenderit fugiat, recusandae placeat quas et provident veniam impedit, commodi minus dignissimos, repellendus quaerat sint adipisci aut, debitis. Architecto minima, harum! <a href="pages/resumo.html">leia mais <i class="material-icons">
+launch </i></a> </p>
     <h2 id="sumario">
       Sumário <a href="#sumario">§</a>
     </h2>
@@ -73,16 +73,17 @@ launch </span></a> </p>
     <p>Curso Superior em Tecnologia em Sistemas para Internet</p>
     <p>2010-2013</p>
     <p class="topo"><a href="#">topo</a></p>
+    <div id="footer"></div>  
+      <div id="social" class="text-center">
+        <a href="#"> <i class="fa-brands fa-square-facebook"></i> </a>
+        <a href="#"> <i class="fa-brands fa-square-twitter"></i> </a>
+        <a href="#"> <i class="fa-brands fa-linkedin"></i> </a>
+      </div>
+      <p id="copyright" class="text-center text-bold text-italic">IFPB &copy; 2017</p>	
+    </div>
+
+    
   
-	<div id="Social" class="text-center">
-		<a href="#"> <i class="fa-brands fa-square-facebook"></i> </a>
-		<a href="#"> <i class="fa-brands fa-square-twitter"></i> </a>
-		<a href="#"> <i class="fa-brands fa-linkedin"></i> </a>
-	</div>	
-	
-  <div id="footer">
-    <p id="copyright" class="text-center text-bold text-italic">IFPB &copy; 2017</p>
-  </div>
 
 </body>
 </html>
